correção de seguração
